align period buttons

--- a/src/sass/layout/_report-grid.scss
+++ b/src/sass/layout/_report-grid.scss
@@ -49,6 +49,7 @@
   &__period-btn-group {
     display: flex;
     flex-direction: column;
+    align-items: start;
     gap: 21px;
     padding: 32px;
   }
