--- a/src/sass/layout/_report-grid.scss
+++ b/src/sass/layout/_report-grid.scss
@@ -136,7 +136,7 @@
 
   &__item--task-card[data-type='work'] {
     background-color: $light-orange;
-    background-image: url('../../../images/icon-work.svg');
+    background-image: url('/images/icon-work.svg');
   }
 
   &__item--task-card[data-type='play'] {
